# gate-server

./: CMakeLists.txt  Meng.aps  Meng.vcxproj  Meng.vcxproj.filters  README.md  emmm.txt  gate-registry.h  gate-request-handler-factory.cpp  gate-request-handler-factory.h  gate-server-application.cpp  gate-server-application.h  test.cpp
Debug/: vc140.idb
Debug/Meng.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Meng.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
gate-handlers/: base.cpp  base.h  query-Cars.cpp  query-Cars.h  update-car-position.cpp  update-car-position.h  update-car-status.cpp  update-car-status.h
index_gate_module/: config  gate_registry.cpp  gate_registry.h  ngx_http_index_gate_module.cpp
